--- a/public/style.css
+++ b/public/style.css
@@ -4,9 +4,11 @@
   font-family: 'Abhaya Libre', serif;
 }
 
-body {
+html, body {
   margin: 0;
   padding: 0;
+  width:  100%;
+  height: 100%;
 }
 
 .hidden {
@@ -25,6 +27,8 @@ section {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  position: relative;
+  z-index: 1;
 }
 
 h1 {
@@ -58,7 +62,30 @@ button:hover, button.inverted {
   color: #FFF;
 }
 
+#seeds button {
+  animation-duration:0.4s;
+  animation-name: fadeIn;
+  animation-timing-function: linear;
+  animation-fill-mode: backwards;
+}
+
 #verses {
   font-size: 1.1em;
   margin-bottom: 1em;
+}
+
+#verses div {
+  animation-duration:1s;
+  animation-name: fadeIn;
+  animation-timing-function: linear;
+  animation-fill-mode: backwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
