Play poem (works in chrome but not safari)

--- a/public/style.css
+++ b/public/style.css
@@ -85,6 +85,12 @@ form {
   animation-fill-mode: backwards;
 }
 
+#actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
